--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
    "scripts": {
       "start": "node ./lib/server.js",
       "dev": "tsnd --respawn server.ts",
-      "test": "jest",
+      "test": "jest --detectOpenHandles",
       "clean": "rimraf lib/",
       "copy-files": "copyfiles -u 1 lib/src",
-      "build": "npm run clean && tsc && npm run copy-files"
+      "build": "npm run clean && tsc && npm run copy-files",
+      "job": "tsnd src/jobs/countVowels/index.ts"
    },
    "dependencies": {
       "axios": "^1.1.2",
@@ -18,6 +19,7 @@
       "dotenv": "^16.0.2",
       "express": "^4.18.1",
       "helmet": "^6.0.0",
+      "jest": "^29.5.0",
       "rimraf": "^3.0.2",
       "swagger-ui-express": "^4.6.3",
       "winston": "^3.8.2"
@@ -30,7 +32,6 @@
       "@types/node": "^18.7.18",
       "@types/supertest": "^2.0.12",
       "@types/swagger-ui-express": "^4.1.3",
-      "jest": "^29.0.3",
       "supertest": "^6.2.4",
       "ts-jest": "^29.0.1",
       "ts-node": "^10.9.1",
