--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "helmet": "^6.0.0",
       "jest": "^29.5.0",
       "rimraf": "^3.0.2",
+      "sinon": "^15.2.0",
       "swagger-ui-express": "^4.6.3",
       "winston": "^3.8.2"
    },
@@ -30,6 +31,7 @@
       "@types/express": "^4.17.14",
       "@types/jest": "^29.0.3",
       "@types/node": "^18.7.18",
+      "@types/sinon": "^10.0.15",
       "@types/supertest": "^2.0.12",
       "@types/swagger-ui-express": "^4.1.3",
       "supertest": "^6.2.4",
