--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  myapp:
+  backend:
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -10,3 +10,4 @@ services:
       - 3000:3000
     volumes:
       - ./src:/app/src
+      - ./swagger.json:/app/swagger.json
